NBNP-259 Remove h2 'title' class (consistent w/ Featured)

--- a/config-yml/views.view.this_day_in_nb_history.yml
+++ b/config-yml/views.view.this_day_in_nb_history.yml
@@ -333,7 +333,7 @@ display:
           empty: true
           tokenize: false
           content:
-            value: "<h2 class=\"title\">This Day in New Brunswick History</h2>\r\n<p><span class=\"glyphicon glyphicon-exclamation-sign\"></span>\r\n    No digital issues were found from this day in history.\r\n</p>"
+            value: "<h2>This Day in New Brunswick History</h2>\r\n<p><span class=\"glyphicon glyphicon-exclamation-sign\"></span>\r\n    No digital issues were found from this day in history.\r\n</p>"
             format: full_html
           plugin_id: text
       relationships: {  }
