--- a/config-yml/system.date.yml
+++ b/config-yml/system.date.yml
@@ -2,7 +2,7 @@ country:
   default: ''
 first_day: 0
 timezone:
-  default: UTC
+  default: America/Halifax
   user:
     configurable: true
     warn: false
