IN-154 Change local hostname asserted in ULI

--- a/env/drupal.env
+++ b/env/drupal.env
@@ -2,7 +2,7 @@
 # to production.
 
 DEPLOY_ENV=local
-DEV_WEB_URI=http://localhost:3095
+DEV_WEB_URI=http://local-newspapers.lib.unb.ca:3095
 
 DRUPAL_ADMIN_ACCOUNT_NAME=admin
 DRUPAL_ADMIN_ACCOUNT_PASS=dockeradminpass
