NBNP-268 Create/apply reusable class for image link hover effect

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1960,7 +1960,7 @@ display:
           break_phrase: false
           not: false
           plugin_id: search_api
-      css_class: browse-issues
+      css_class: 'browse-issues image-link-shadow'
     cache_metadata:
       max-age: -1
       contexts:
