NBNP-268 Apply image link hover effect to carousel image

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1105,7 +1105,7 @@ display:
             label: ''
           plugin_id: search_api
       display_description: ''
-      css_class: ''
+      css_class: image-link-shadow
       pager:
         type: none
         options:
