NBNP-271 Relabel/style Search reset button, remove Fulltext reset

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -45,7 +45,7 @@ display:
         type: basic
         options:
           submit_button: Search
-          reset_button: true
+          reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
@@ -1841,7 +1841,7 @@ display:
         type: basic
         options:
           submit_button: 'Apply Filters'
-          reset_button: true
+          reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
@@ -2757,7 +2757,7 @@ display:
         type: input_required
         options:
           submit_button: 'Search Fulltext'
-          reset_button: true
+          reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
