--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -45,7 +45,7 @@ display:
         options:
           submit_button: 'Browse/Search Titles'
           reset_button: true
-          reset_button_label: Reset
+          reset_button_label: Clear
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
           sort_asc_label: Asc
