DOCKW-6 Dockworker 2.0 conversion

--- a/env/drupal.env
+++ b/env/drupal.env
@@ -2,16 +2,16 @@
 # to production.
 
 DEPLOY_ENV=local
-DEV_WEB_URI=http://local-newspapers.lib.unb.ca:3095
+
+LOCAL_HOSTNAME=local-newspapers.lib.unb.ca
+LOCAL_PORT=3095
+LOCAL_USER_GROUP=1000
 
 DRUPAL_ADMIN_ACCOUNT_NAME=admin
 DRUPAL_ADMIN_ACCOUNT_PASS=dockeradminpass
 DRUPAL_CONFIGURATION_EXPORT_SKIP=devel
 DRUPAL_DB_PASSWORD=drupal
-DRUPAL_IMPORT_CONTENT=TRUE
 DRUPAL_TESTING_TOOLS=TRUE
-
-LOCAL_USER_GROUP=20
 
 MYSQL_HOSTNAME=mysql
 MYSQL_PORT=3306
