--- a/dockworker.yml
+++ b/dockworker.yml
@@ -4,7 +4,8 @@ dockworker:
     project_prefix: NBNP
     name: newspapers.lib.unb.ca
     upstream_image:
-      - unblibraries/drupal:alpine-nginx-php7-8.x-composer
       - mysql:5.7
+      - redis:5-alpine
+      - unblibraries/drupal:8.x-1.x
       - unblibraries/solr-drupal:7.x
   options:
