--- a/env/jenkins.env
+++ b/env/jenkins.env
@@ -1,3 +1,3 @@
 SERVICE_NAME=newspapers.lib.unb.ca
-DOCKER_UPSTREAM_IMAGE=unblibraries/drupal:alpine-nginx-php7-8.x-composer
+DOCKER_UPSTREAM_IMAGE=unblibraries/drupal:8.x-1.x
 DEPLOYMENT_FINISHED_MARKER=99_report_as_complete
