--- a/dockworker.yml
+++ b/dockworker.yml
@@ -8,5 +8,5 @@ dockworker:
       - mysql:5.7
       - redis:5-alpine
       - unblibraries/drupal:8.x-1.x
-      - unblibraries/solr-drupal:7.x
+      - unblibraries/solr-drupal:8.x-3.x
   options:
