--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -84,6 +84,7 @@ display:
           description: ''
           columns:
             title: title
+            holdings: holdings
             field_sort_title: field_sort_title
             field_place_of_publication: field_place_of_publication
             sort_locality: sort_locality
@@ -95,8 +96,15 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
+            holdings:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             field_sort_title:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
@@ -108,21 +116,21 @@ display:
               empty_column: false
               responsive: ''
             sort_locality:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
             field_first_issue_search_date_sort:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
             field_last_issue_search_date_sort:
-              sortable: true
+              sortable: false
               default_sort_order: desc
               align: ''
               separator: ''
@@ -682,18 +690,6 @@ display:
           group_type: group
           admin_label: ''
           order: DESC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: search_api
-        field_sort_title:
-          id: field_sort_title
-          table: search_api_index_solr_newspapers_lib_unb_ca
-          field: field_sort_title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: ASC
           exposed: false
           expose:
             label: ''
