CDOCK-9 Replace ngram w/ fulltext type pages index (NBNP)

--- a/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
@@ -53,7 +53,7 @@ field_settings:
     label: 'Page OCR'
     datasource_id: 'entity:digital_serial_page'
     property_path: page_ocr
-    type: solr_text_ngram
+    type: text
     dependencies:
       module:
         - digital_serial_page
@@ -61,7 +61,7 @@ field_settings:
     label: 'Page Sort'
     datasource_id: 'entity:digital_serial_page'
     property_path: page_sort
-    type: string
+    type: integer
     dependencies:
       module:
         - digital_serial_page
