update header url

--- a/config-yml/newspapers_lib_unb_ca.settings.yml
+++ b/config-yml/newspapers_lib_unb_ca.settings.yml
@@ -18,7 +18,7 @@ logo:
   use_default: 1
 modal_enabled: 1
 tooltip_enabled: 0
-header_uri: 'https://lib.unb.ca/core/inc-2015/head-nav.php?banner=nbnp'
+header_uri: 'https://web.lib.unb.ca/core/inc-2015/head-nav.php?banner=nbnp'
 header_refresh_seconds: '900'
 header_write_path: /app/html/sites/default/files/head-nav.html.twig
 table: ''
