DOCKW-5 Add health checks

--- a/package-conf/nginx/app.conf
+++ b/package-conf/nginx/app.conf
@@ -8,6 +8,8 @@ http {
   client_max_body_size 512M;
   client_body_buffer_size 1M;
 
+  include conf.d/inc/agent-filter.conf;
+
   server {
     listen  80;
     charset utf-8;
@@ -16,8 +18,8 @@ http {
     root APP_WEBROOT;
     index index.html index.htm index.php;
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log warn;
+    access_log NGINX_LOG_FILE combined if=$ua_log_allow;
+    error_log NGINX_ERROR_LOG_FILE warn;
 
     location = /favicon.ico { log_not_found off; access_log off; }
     location = /robots.txt  { access_log off; log_not_found off; }
