DOCKW-5 Add map hash sizes

--- a/package-conf/nginx/app.conf
+++ b/package-conf/nginx/app.conf
@@ -1,12 +1,15 @@
 http {
   include mime.types;
   default_type application/octet-stream;
-  sendfile on;
-  keepalive_timeout 240;
-  fastcgi_buffers 16 16k;
-  fastcgi_buffer_size 32k;
-  client_max_body_size 512M;
+
   client_body_buffer_size 1M;
+  client_max_body_size 512M;
+  fastcgi_buffer_size 32k;
+  fastcgi_buffers 16 16k;
+  keepalive_timeout 240;
+  map_hash_bucket_size 128;
+  map_hash_max_size 4096;
+  sendfile on;
 
   include conf.d/inc/agent-filter.conf;
 
