NBNP-275 Switch digital issue browse pager to mini + style

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -13,7 +13,6 @@ dependencies:
     - owlcarousel
     - search_api
     - user
-    - views_infinite_scroll
 id: digital_page_lister
 label: 'Digital Page Lister'
 module: views
@@ -1836,15 +1835,15 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: infinite_scroll
+        type: mini
         options:
           items_per_page: 52
           offset: 0
           id: 0
           total_pages: null
           tags:
-            previous: ‹‹
-            next: ››
+            previous: '‹‹ older issues'
+            next: 'newer issues ››'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -1853,9 +1852,6 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Load More Issues'
-            automatically_load_content: false
       cache:
         type: none
       title: 'Digital Issues'
