--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     "unb-libraries/unb_lib_theme": "dev-8.x-bootstrap-3.x"
   },
   "require-dev": {
-    "unb-libraries/dockworker-drupal": "^2.1.11"
+    "unb-libraries/dockworker-drupal": "~3"
   },
   "scripts": {
     "post-update-cmd": [
-      "vendor/bin/dockworker git:setup-hooks"
+      "vendor/bin/dockworker dockworker:git:setup-hooks"
     ]
   }
 }
