--- a/dockworker.yml
+++ b/dockworker.yml
@@ -1,12 +1,26 @@
 dockworker:
-  version: 1.0
-  instance:
-    project_prefix: NBNP
+  version: '3.0'
+  application:
     name: newspapers.lib.unb.ca
-    upstream_image:
+    finish_marker: '99_z_notify_user_URI'
+    project_prefix: NBNP
+    upstream_images:
       - mailhog/mailhog
       - mysql:5.7
       - redis:5-alpine
-      - unblibraries/drupal:8.x-1.x
+      - unblibraries/dockworker-drupal:latest
       - unblibraries/solr-drupal:8.x-3.x
-  options:
+  deployment:
+    environments:
+      - dev
+      - prod
+  github:
+    repo: newspapers.lib.unb.ca
+    owner: unb-libraries
+  image:
+    push_branches:
+      - dev
+      - prod
+    name: unblibraries/newspapers.lib.unb.ca
+    date_tag_image: true
+    repository: dockercloud
