--- a/config-yml/views.view.digital_issue_list.yml
+++ b/config-yml/views.view.digital_issue_list.yml
@@ -14,7 +14,6 @@ description: ''
 tag: ''
 base_table: digital_serial_issue
 base_field: id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -2083,6 +2082,8 @@ display:
               administrator: '0'
               newspaper_administrator: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -2125,6 +2126,8 @@ display:
               administrator: '0'
               newspaper_administrator: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -2167,6 +2170,8 @@ display:
               administrator: '0'
               newspaper_administrator: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
