--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -20,7 +20,6 @@ description: 'Issue page lister with exposed filter search, image carousel, etc'
 tag: ''
 base_table: search_api_index_pages_newspapers_lib_unb_ca
 base_field: search_api_id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -576,6 +575,8 @@ display:
               anonymous: '0'
               administrator: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1808,6 +1809,8 @@ display:
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -2712,6 +2715,8 @@ display:
               administrator: '0'
               newspaper_administrator: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
