--- a/config-yml/views.view.print_title_listing.yml
+++ b/config-yml/views.view.print_title_listing.yml
@@ -18,7 +18,6 @@ description: 'Listing of all publications associated with a ''Print'' Serial Hol
 tag: ''
 base_table: serial_holding
 base_field: id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -681,6 +680,8 @@ display:
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -724,6 +725,8 @@ display:
               newspaper_administrator: '0'
               serial_ho: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
