--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -20,7 +20,6 @@ description: ''
 tag: ''
 base_table: search_api_index_solr_newspapers_lib_unb_ca
 base_field: search_api_id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -624,6 +623,8 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -665,6 +666,8 @@ display:
               newspaper_administrator: '0'
               serial_ho: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
