NBNP-224 Disable password fields on create user form

--- a/config-yml/ldap_user.settings.yml
+++ b/config-yml/ldap_user.settings.yml
@@ -21,4 +21,4 @@ ldapUserSyncMappings:
   ldap: {  }
 _core:
   default_config_hash: hjgcuHpcsme6SW-7MKpZm3bhnR76f1yX2Y8Xe0STesw
-disableAdminPasswordField: false
+disableAdminPasswordField: true
