--- a/config-yml/core.entity_form_display.taxonomy_term.family.default.yml
+++ b/config-yml/core.entity_form_display.taxonomy_term.family.default.yml
@@ -27,6 +27,13 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 100
+    region: content
+    third_party_settings: {  }
 hidden:
   description: true
   langcode: true
