--- a/deployment/k8s/dev/deployment.yaml
+++ b/deployment/k8s/dev/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -13,6 +13,9 @@ metadata:
   name: newspapers-lib-unb-ca
   namespace: dev
 spec:
+  selector:
+    matchLabels:
+      uri: dev-newspapers.lib.unb.ca
   replicas: 1
   revisionHistoryLimit: 2
   strategy:
