IN-221 Add nodeselector to deployments

--- a/deployment/k8s/dev/deployment.yaml
+++ b/deployment/k8s/dev/deployment.yaml
@@ -35,6 +35,8 @@ spec:
         vcsRepository: newspapers.lib.unb.ca
         vcsRef: dev
     spec:
+      nodeSelector:
+        deployenv: dev
       containers:
         -
           name: newspapers-lib-unb-ca
