--- a/env/mysql.env
+++ b/env/mysql.env
@@ -1,6 +1,6 @@
 # Local-only development MySQL environment settings. These are not applied
 # to production.
-MYSQL_DATABASE=drupal
+MYSQL_DATABASE=newspapers_db
 MYSQL_PASSWORD=drupal
 MYSQL_ROOT_PASSWORD=drupal
-MYSQL_USER=drupal
+MYSQL_USER=newspapers_db
