--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -81,7 +81,7 @@ module:
   pathauto: 1
   views: 10
   serial_holding: 100
-  newspapers: 1000
+  minimal: 1000
 theme:
   bootstrap: 0
   stable: 0
@@ -90,6 +90,6 @@ theme:
   bartik: 0
   newspapers_lib_unb_ca: 0
   seven: 0
-profile: newspapers
+profile: minimal
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
